--- a/style.css
+++ b/style.css
@@ -156,12 +156,12 @@ h3 {
         width: 40%;
     }
 }
-.taskDescription{
+#taskDescription{
     padding: 20px;
     height: 10px;
     width: 60%;
     background-color: rgba(0, 0, 0, 0.534);
     border: none;
     border: 0.5px solid blueviolet;
-    color: whit
+    color: white;
 }
